--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -124,7 +124,7 @@
 .bigcontainer{
   display: flex;
   width: 100%;
-
+  height: 320px;
   justify-content: center;
 }
 
@@ -139,6 +139,33 @@
   margin-top: 3rem;
   width: 30%;
   border: 4px solid black;
+  flex-direction: column;
+}
+
+.imgin img{
+  display: flex;
+  width: 50%;
+  margin-left: 5rem;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+  border: 1px solid red;
+}
+
+.wordbox1{
+  display: flex;
+  width:100%;
+  height: 3rem;
+  border: 1px solid red;
+  background-color: black;
+  color: white;
+  align-content: center;
+  justify-content: center;
+}
+
+.wordbox1 p{
+  display: flex;
+  margin-top: 0.65rem;
+  margin-bottom:0.65rem;
 }
 
 .box2{
@@ -146,6 +173,33 @@
   margin-top: 3rem;
   width: 30%;
   border: 4px solid black;
+  flex-direction: column;
+}
+
+.imgin2 img{
+  display: flex;
+  width: 50%;
+  margin-left: 5rem;
+  margin-top: 3rem;
+  margin-bottom: 2rem;
+  border: 1px solid red;
+}
+
+.wordbox2{
+  display: flex;
+  width:100%;
+  height: 3rem;
+  border: 1px solid red;
+  background-color: black;
+  color: white;
+  align-content: center;
+  justify-content: center;
+}
+
+.wordbox2 p{
+  display: flex;
+  margin-top: 0.65rem;
+  margin-bottom:0.65rem;
 }
 
 .box3{
@@ -153,4 +207,25 @@
   margin-top: 3rem;
   width: 30%;
   border: 4px solid black;
+  flex-direction: column;
+}
+
+.imgin3 img{
+  display: flex;
+  width: 50%;
+  margin-left: 5rem;
+  margin-top: 6rem;
+  margin-bottom: 3.7rem;
+  border: 1px solid red;
+}
+
+.wordbox3{
+  display: flex;
+  width:100%;
+  height: 3rem;
+  border: 1px solid red;
+  background-color: black;
+  color: white;
+  align-content: center;
+  justify-content: center;
 }
