--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -166,6 +166,8 @@
   display: flex;
   margin-top: 0.65rem;
   margin-bottom:0.65rem;
+  font-family: helvetica;
+  font-size: 1rem;
 }
 
 .box2{
@@ -200,6 +202,8 @@
   display: flex;
   margin-top: 0.65rem;
   margin-bottom:0.65rem;
+  font-family: helvetica;
+  font-size: 1rem;
 }
 
 .box3{
@@ -229,3 +233,60 @@
   align-content: center;
   justify-content: center;
 }
+
+.wordbox3 p{
+  display: flex;
+  margin-top: 0.65rem;
+  margin-bottom:0.65rem;
+  font-family: helvetica;
+  font-size: 1rem;
+}
+/*Fifth Section*/
+.stats{
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+.statholder{
+  display: flex;
+  width: 960px;
+  border: 1px solid blue;
+  justify-content: space-between;
+}
+
+
+    .location{
+    display: flex;
+    width: 35%;
+    border: 1px solid red;
+    color: white;
+    background-color: black;
+    font-family: helvetica;
+    font-size: 1rem;
+    margin-top:3rem;
+  }
+
+  .location p{
+    margin-left: 2rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
+
+  .hours{
+    display: flex;
+    width: 35%;
+    border: 1px solid red;
+    color:white;
+    background-color: black;
+   font-family: helvetica;
+   font-size: 1rem;
+   margin-top: 3rem;
+
+}
+
+  .hours p{
+    margin-left: 2rem;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+  }
