--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -310,3 +310,28 @@
     margin-top: 1rem;
     margin-bottom: 1rem;
   }
+
+  /*fifth section*/
+  .ender{
+    display: flex;
+    width: 100%;
+    margin-top: 4rem;
+    background-color: black;
+    justify-content: center;
+  }
+  .blackend{
+    display: flex;
+    height: 10rem;
+    border: 1px solid red;
+    align-items: center;
+    width: 960px;
+  }
+
+  .endtext {
+    display: flex;
+    color: white;
+    font-family: helvetica;
+    font-size: 1rem;
+    border: 1px solid red;
+
+  }
