--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -251,6 +251,7 @@
 .statholder{
   display: flex;
   width: 960px;
+  height: 300px;
   border: 1px solid blue;
   justify-content: space-between;
 }
@@ -259,6 +260,7 @@
     .location{
     display: flex;
     width: 35%;
+    height: 5rem;
     color: white;
     background-color: black;
     font-family: helvetica;
@@ -268,13 +270,18 @@
     border: 1px solid red;
   }
 
-.that{
+#that {
   display: flex;
   width: 100%;
-  height: 1rem;
-  background-color: white;
+  height: 2rem;
   font-family: helvetica;
+  border: 1px solid red;
+  text-align: left;
+  background-color: white;
   color: black;
+  margin-right: 2rem;
+
+
 }
 
   .location p{
@@ -286,18 +293,22 @@
   .hours{
     display: flex;
     width: 35%;
+    height: 5rem;
     color:white;
     background-color: black;
    font-family: helvetica;
    font-size: 1rem;
    margin-top: 3rem;
+   border: 1px solid red;
+   flex-direction: column;
 
 }
 
-.them{
+#them{
   display: flex;
   width: 100%;
-  height: 1rem;
+  height: 2rem;
+  background-color: white;
   border: 1px solid red;
   font-family: helvetica;
   color: black;
